--- a/src/Bearded.Utilities.csproj
+++ b/src/Bearded.Utilities.csproj
@@ -132,11 +132,13 @@
     <Compile Include="Math\Geometry\Rectangle.cs" />
     <Compile Include="Math\Interpolate.cs" />
     <Compile Include="SpaceTime\Circle.cs" />
+    <Compile Include="SpaceTime\Difference2.cs" />
     <Compile Include="SpaceTime\Extensions.cs" />
     <Compile Include="SpaceTime\Instant.cs" />
     <Compile Include="SpaceTime\Position2.cs" />
     <Compile Include="SpaceTime\TimeSpan.cs" />
     <Compile Include="SpaceTime\Unit.cs" />
+    <Compile Include="SpaceTime\Velocity2.cs" />
     <Compile Include="Threading\IActionQueue.cs" />
     <Compile Include="Threading\ManualActionQueue.cs" />
     <Compile Include="Threading\BackgroundActionQueue.cs" />
