added more spacetime2 types, and completed and commented feature set of existing types

--- a/src/Bearded.Utilities.csproj
+++ b/src/Bearded.Utilities.csproj
@@ -131,14 +131,17 @@
     <Compile Include="Math\Geometry\PolarPosition.cs" />
     <Compile Include="Math\Geometry\Rectangle.cs" />
     <Compile Include="Math\Interpolate.cs" />
-    <Compile Include="SpaceTime\Circle.cs" />
-    <Compile Include="SpaceTime\Difference2.cs" />
+    <Compile Include="SpaceTime\2d\Circle.cs" />
+    <Compile Include="SpaceTime\2d\Difference2.cs" />
     <Compile Include="SpaceTime\Extensions.cs" />
     <Compile Include="SpaceTime\Instant.cs" />
-    <Compile Include="SpaceTime\Position2.cs" />
+    <Compile Include="SpaceTime\2d\Position2.cs" />
+    <Compile Include="SpaceTime\Radius.cs" />
+    <Compile Include="SpaceTime\Speed.cs" />
     <Compile Include="SpaceTime\TimeSpan.cs" />
     <Compile Include="SpaceTime\Unit.cs" />
-    <Compile Include="SpaceTime\Velocity2.cs" />
+    <Compile Include="SpaceTime\RadiusSquared.cs" />
+    <Compile Include="SpaceTime\2d\Velocity2.cs" />
     <Compile Include="Threading\IActionQueue.cs" />
     <Compile Include="Threading\ManualActionQueue.cs" />
     <Compile Include="Threading\BackgroundActionQueue.cs" />
